not showing on browsers with no metamask extension fixed tryna add arrow down

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -114,6 +114,51 @@ h6 {
   margin-top: 15px;
 }
 
+.modal {
+  position: absolute;
+  width: 200px;
+  background-color: #131313;
+  box-shadow: 0 0 10px rgba(143, 143, 143, 0.989);
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 1.2rem;
+  margin-left: -5rem;
+  z-index: 999;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+}
+
+.modal button {
+  display: block;
+  margin: 10px 0;
+  width: 100%;
+  background-color: #132c44;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
+.modal__close {
+  color: #ffffff;
+  float: right;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.address__buttons {
+  position: relative;
+}
+
+.address__buttons:hover .modal-container {
+  display: block;
+}
+
+@media (max-width: 650px) {
+.modal{
+    display: none;
+  }
+}
+
 @media (max-width: 450px) {
   .the__ul span {
     display: flex;
@@ -121,9 +166,9 @@ h6 {
   }
 }
 
+
 @media (max-width: 430px) {
   .switch__buttons {
     display: none;
   }
 }
-
